# robot_kf

./: .gitignore  CMakeLists.txt  LICENSE  mainpage.dox  manifest.xml
include/robot_kf/: robot_kf.h
msg/: Wheel.msg  WheelOdometry.msg
nodes/: calibrate_encoders.py  calibrate_latency.py  estimate_omega.py  estimate_velocity.py  filter_compass.py  visualize_distribution.py
src/: calibrate.py  calibrate_compass.py  robot_kf.cc  robot_kf_node.cc  robot_kf_node.h
